# avito-banners

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.local.yaml  pyproject.toml  pytest.ini
src/: main.py
src/api/: auth_exceptions.py  router.py
src/api/v1/: router.py
src/api/v1/banners/: controllers.py  dependencies.py
src/api/v1/banners/serializers/: create_banner.py  get_banner_list.py  get_banner_version_history.py  get_user_banner.py  update_banner.py
src/config/: cache_client.py  settings.py
src/services/: banner_service.py
src/storages/: models.py
src/storages/banners/cache/: cache_repo.py  key_schema.py
src/storages/banners/db/: db_repo.py  exceptions.py  session.py
src/storages/banners/db/query_builders/: check_banner_exists_query.py  delete_banners_by_feature_or_tag.py  get_banner_list_query.py  get_banner_versions_list.py  get_by_feature_and_tag_id_builder.py
src/utils/: generic_response.py
tests/api/: conftest.py
tests/api/banners/: test_get_banner.py
